# FaceDetector

./: .gitignore  CMakeLists.txt  README.md
faces/: Leonardo_DiCaprio.labeled_faces.txt  Lisa_Murkowski.labeled_faces.txt  Matt_Damon.labeled_faces.txt  Natalia_Verbeke.labeled_faces.txt  Orlando_Bloom.labeled_faces.txt  Tom_Hanks.labeled_faces.txt
faces/Lincoln_Chafee/: Lincoln_Chafee_5.avi
faces/Natalia_Verbeke/: Natalia_Verbeke_5.avi
faces/Orlando_Bloom/: Orlando_Bloom_4.avi  Orlando_Bloom_5.avi
faces/Reese_Witherspoon/: Reese_Witherspoon_0.avi
faces/Thaksin_Shinawatra/: Thaksin_Shinawatra_3.avi
faces/Timothy_Goebel/: Timothy_Goebel_0.avi  Timothy_Goebel_4.avi
faces/Tom_Hanks/: Tom_Hanks_4.avi
src/: annotation.cpp  annotation.h  detected_face.cpp  detected_face.h  face_detector.cpp  face_detector.h  face_recognizer.cpp  face_recognizer.h  face_tracker.cpp  face_tracker.h  feature_extractor.cpp  feature_extractor.h  main.cpp  utils.cpp  utils.h
test_data/Lincoln_Chafee/: 2.avi  3.avi  annotation.csv
test_data/Orlando_Bloom/: 0.avi  3.avi
test_data/Reese_Witherspoon/: 1.avi  4.avi  annotation.csv
test_data/Sandra_Bullock/: 2.avi  3.avi  annotation.csv
test_data/Thaksin_Shinawatra/: 0.avi  1.avi  annotation.csv
test_data/Timothy_Goebel/: 3.avi  5.avi  annotation.csv
test_data/Tino_Martinez/: 0.avi  1.avi  annotation.csv
test_data/Tom_Hanks/: 3.avi  5.avi
test_data/Unknown/: 0.avi  1.avi  2.avi  3.avi  4.avi  5.avi  6.avi  7.avi  8.avi  9.avi
test_data/Viara_Vike-Freiberga/: 0.avi  2.avi  annotation.csv
test_data/William_Bratton/: 0.avi  (+2 more)
(+20 files in other folders)
